temp fix for new library version breaking things

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,8 @@ build_unflags =
   -DARDUINO_ESP32_DEV
 
 lib_deps =
-  e-radionicacom/InkplateLibrary @ ^5.5.1
+  ; version 5.7.0 breaks this framework. Force 5.1.1 for now until resolved
+  e-radionicacom/InkplateLibrary @ 5.5.1
   ;https://github.com/e-radionicacom/Inkplate-6-SDFat-Arduino-Library.git
   arduino-libraries/NTPClient @ ^3.1.0 ; NTP client
   paulstoffregen/Time @ ^1.6.1
