updated to lask known working commit for inkplate library

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,11 @@ build_unflags =
 
 lib_deps =
   ; version 5.7.0 breaks this framework. Force 5.1.1 for now until resolved
-  e-radionicacom/InkplateLibrary @ 5.5.1
+  ;e-radionicacom/InkplateLibrary @ 5.5.1
+  ; 38845ded78189f685e1702c6e208165f6ce2bc6b good
+  ; 269f287a42ab53b9cffe1f9eed8165b6188086b0 bad (first)
+  ; 22ba84b5729a8a5c8aa7dcc476476d975629c1c7 bad
+  https://github.com/e-radionicacom/Inkplate-Arduino-library#38845ded78189f685e1702c6e208165f6ce2bc6b
   ;https://github.com/e-radionicacom/Inkplate-6-SDFat-Arduino-Library.git
   arduino-libraries/NTPClient @ ^3.1.0 ; NTP client
   paulstoffregen/Time @ ^1.6.1
@@ -48,7 +52,7 @@ build_flags =
 ; debug levels
 ; ARDUHAL_LOG_LEVEL_NONE
 ; ARDUHAL_LOG_LEVEL_ERROR
-; ARDUHAL_LOG_LEVEL_WARN
+; ARDUHAL_LOG_LEVEL_WARN  *default*
 ; ARDUHAL_LOG_LEVEL_INFO
 ; ARDUHAL_LOG_LEVEL_DEBUG
 ; ARDUHAL_LOG_LEVEL_VERBOSE
