--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,8 @@ lib_deps =
   ; 38845ded78189f685e1702c6e208165f6ce2bc6b good
   ; 269f287a42ab53b9cffe1f9eed8165b6188086b0 bad (first)
   ; 22ba84b5729a8a5c8aa7dcc476476d975629c1c7 bad
-  https://github.com/e-radionicacom/Inkplate-Arduino-library#38845ded78189f685e1702c6e208165f6ce2bc6b
+  ; 93394781b203303727c72e9e3d872dcb74a8a091 good (fix)
+  https://github.com/e-radionicacom/Inkplate-Arduino-library#93394781b203303727c72e9e3d872dcb74a8a091
   ;https://github.com/e-radionicacom/Inkplate-6-SDFat-Arduino-Library.git
   arduino-libraries/NTPClient @ ^3.1.0 ; NTP client
   paulstoffregen/Time @ ^1.6.1
