--- a/platformio.ini
+++ b/platformio.ini
@@ -1,77 +1,57 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 default_envs = esp32
-;src_dir = vcom_src
 
 [env]
 platform = https://github.com/platformio/platform-espressif32.git
 framework = arduino
 monitor_speed = 115200
 board = esp32dev
-; CPU Frequency. Max for ESP32: 240000000L
 board_build.f_cpu = 240000000L
-board_build.partitions = min_spiffs.csv ; use SD card for storage and use the rest of flash for larger apps
-
-; Until there is a specific Inkplate10 board definition we need to ensure
-; ARDUINO_ESP32_DEV is not set, as it will be always prioritized by the library
-; thinking it is an Inkplate 6 (which still has this board name for BC reasons).
-build_unflags =
-  -DARDUINO_ESP32_DEV
-
-lib_deps =
-  ; version 5.7.0 breaks this framework. Force 5.1.1 for now until resolved
-  ;e-radionicacom/InkplateLibrary @ 5.5.1
-  ; 38845ded78189f685e1702c6e208165f6ce2bc6b good
-  ; 269f287a42ab53b9cffe1f9eed8165b6188086b0 bad (first)
-  ; 22ba84b5729a8a5c8aa7dcc476476d975629c1c7 bad
-  ; 93394781b203303727c72e9e3d872dcb74a8a091 good (fix)
-  https://github.com/e-radionicacom/Inkplate-Arduino-library#93394781b203303727c72e9e3d872dcb74a8a091
-  ;https://github.com/e-radionicacom/Inkplate-6-SDFat-Arduino-Library.git
-  arduino-libraries/NTPClient @ ^3.1.0 ; NTP client
-  paulstoffregen/Time @ ^1.6.1
-  jchristensen/Timezone @ ^1.2.4 ; for timezone and DST calculations
-  ricmoo/QRCode @ ^0.0.1 ; for QR code
-  marvinroger/AsyncMqttClient @ ^0.9.0 ; FOR MQTT
-  bblanchon/ArduinoJson @ ^6.18.5 ; for JSON
-
-; set the default target to compile, upload, and monitor
-targets = upload, monitor
-monitor_filters = colorize, time, esp32_exception_decoder, default
-
-;monitor_flags=
-    ;--echo
-    ;--raw ; neded for colors (CONFIG_ARDUHAL_LOG_COLORS), but incompatible with time filter
+board_build.partitions = min_spiffs.csv
+build_unflags = -DARDUINO_ESP32_DEV
+lib_deps = 
+	https://github.com/e-radionicacom/Inkplate-Arduino-library#93394781b203303727c72e9e3d872dcb74a8a091
+	arduino-libraries/NTPClient @ ^3.1.0
+	paulstoffregen/Time @ ^1.6.1
+	jchristensen/Timezone @ ^1.2.4
+	ricmoo/QRCode @ ^0.0.1
+	marvinroger/AsyncMqttClient @ ^0.9.0
+	bblanchon/ArduinoJson @ ^6.18.5
+targets = 
+	upload
+	monitor
+monitor_filters = 
+	colorize
+	time
+	esp32_exception_decoder
+	default
 
 [env:esp32]
-build_flags =
-  -DARDUINO_INKPLATE10
-  -DBOARD_HAS_PSRAM
-  -mfix-esp32-psram-cache-issue
-  ;-DCONFIG_ARDUHAL_LOG_COLORS=1 ; enable debug printing colors, breaks esp32_exception_decoder
-  -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW_PTRVAL ; sets configCHECK_FOR_STACK_OVERFLOW = 1, helps detect stack overflows
-  -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_WARN ; default should be ARDUHAL_LOG_LEVEL_WARN
-
-; debug levels
-; ARDUHAL_LOG_LEVEL_NONE
-; ARDUHAL_LOG_LEVEL_ERROR
-; ARDUHAL_LOG_LEVEL_WARN  *default*
-; ARDUHAL_LOG_LEVEL_INFO
-; ARDUHAL_LOG_LEVEL_DEBUG
-; ARDUHAL_LOG_LEVEL_VERBOSE
+build_flags = 
+	-DARDUINO_INKPLATE6PLUS
+	-DBOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
+	-DCONFIG_FREERTOS_CHECK_STACKOVERFLOW_PTRVAL
+	-DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_WARN
 
 [env:ota]
 extends = env:esp32
 targets = upload
-; for OTA
-; host machine much be reachable from ESP
-; might need to set partitions sometime
 upload_port = homeplate.local
 upload_protocol = espota
-upload_flags =
-  --host_port=8266 ; this port must be allowed through the firewall from the ESP to this computer
-
+upload_flags = --host_port=8266
 
 [env:vcom]
 extends = env:esp32
-lib_deps =
-  e-radionicacom/InkplateLibrary @ ^5.5.1
-src_filter= -<*> +<../vcom_src/>
+lib_deps = e-radionicacom/InkplateLibrary @ ^5.5.1
+src_filter = -<*> +<../vcom_src/>
