--- a/platformio.ini
+++ b/platformio.ini
@@ -74,4 +74,4 @@ upload_flags =
 extends = env:esp32
 lib_deps =
   e-radionicacom/InkplateLibrary @ ^5.5.1
-src_filter= -<*> +<../vcom_src/>
+build_src_filter= -<*> +<../vcom_src/>
