fix lib include

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,8 @@
 [platformio]
 default_envs = esp32
 ;src_dir = vcom_src
+; set the below to add an "include" dir to the build path
+include_dir =
 
 [env]
 platform = https://github.com/platformio/platform-espressif32.git
