--- a/platformio.ini
+++ b/platformio.ini
@@ -5,7 +5,7 @@ default_envs = esp32
 include_dir =
 
 [env]
-platform = https://github.com/platformio/platform-espressif32.git
+platform = espressif32
 framework = arduino
 monitor_speed = 115200
 board = esp32dev
@@ -20,24 +20,24 @@ build_unflags =
   -DARDUINO_ESP32_DEV
 
 lib_deps =
-  ; version 5.7.0 breaks this framework. Force 5.1.1 for now until resolved
-  ;e-radionicacom/InkplateLibrary @ 5.5.1
-  ; 38845ded78189f685e1702c6e208165f6ce2bc6b good
-  ; 269f287a42ab53b9cffe1f9eed8165b6188086b0 bad (first)
-  ; 22ba84b5729a8a5c8aa7dcc476476d975629c1c7 bad
-  ; 93394781b203303727c72e9e3d872dcb74a8a091 good (fix)
-  https://github.com/e-radionicacom/Inkplate-Arduino-library#93394781b203303727c72e9e3d872dcb74a8a091
-  ;https://github.com/e-radionicacom/Inkplate-6-SDFat-Arduino-Library.git
-  arduino-libraries/NTPClient @ ^3.1.0 ; NTP client
-  paulstoffregen/Time @ ^1.6.1
-  jchristensen/Timezone @ ^1.2.4 ; for timezone and DST calculations
-  ricmoo/QRCode @ ^0.0.1 ; for QR code
-  marvinroger/AsyncMqttClient @ ^0.9.0 ; FOR MQTT
-  bblanchon/ArduinoJson @ ^6.18.5 ; for JSON
+  ; LIB @ [^]VERSION ('^' means latest version with same major version number)
+  ; 1.2.3 - an exact version number. Use only this exact version
+  ; ^1.2.3 - any compatible version (exact version for 1.x.x versions)
+  ; ~1.2.3 - any version with the same major and minor versions, and an equal or greater patch version
+  ; >1.2.3 - any version greater than 1.2.3. >=, <, and <= are also possible
+  ; >0.1.0,!=0.2.0,<0.3.0 - any version greater than 0.1.0, not equal to 0.2.0 and less than 0.3.0
+  
+  https://github.com/e-radionicacom/Inkplate-Arduino-library @ 5.7.1
+  arduino-libraries/NTPClient @ 3.2.1 ; NTP client
+  paulstoffregen/Time @ 1.6.1
+  jchristensen/Timezone @ 1.2.4 ; for timezone and DST calculations
+  ricmoo/QRCode @ 0.0.1 ; for QR code
+  marvinroger/AsyncMqttClient @ 0.9.0 ; FOR MQTT
+  bblanchon/ArduinoJson @ 6.19.4 ; for JSON
 
 ; set the default target to compile, upload, and monitor
 targets = upload, monitor
-monitor_filters = colorize, time, esp32_exception_decoder, default
+monitor_filters = time, esp32_exception_decoder, default
 
 ;monitor_flags=
     ;--echo
@@ -48,10 +48,10 @@ build_flags =
   -DARDUINO_INKPLATE10
   -DBOARD_HAS_PSRAM
   -mfix-esp32-psram-cache-issue
-  ;-DCONFIG_ARDUHAL_LOG_COLORS=1 ; enable debug printing colors, breaks esp32_exception_decoder
   -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW_PTRVAL ; sets configCHECK_FOR_STACK_OVERFLOW = 1, helps detect stack overflows
   -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_WARN ; default should be ARDUHAL_LOG_LEVEL_WARN
 
+; build_type = debug
 ; debug levels
 ; ARDUHAL_LOG_LEVEL_NONE
 ; ARDUHAL_LOG_LEVEL_ERROR
