--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,10 @@
 [platformio]
-default_envs = esp32
-;src_dir = vcom_src
+default_envs = inkplate10
 ; set the below to add an "include" dir to the build path
 include_dir =
 
 [env]
+; default enviroments for inkplate devices
 platform = espressif32
 framework = arduino
 monitor_speed = 115200
@@ -39,41 +39,53 @@ lib_deps =
 targets = upload, monitor
 monitor_filters = time, esp32_exception_decoder, default
 
-;monitor_flags=
-    ;--echo
-    ;--raw ; neded for colors (CONFIG_ARDUHAL_LOG_COLORS), but incompatible with time filter
-
-[env:esp32]
 build_flags =
-  -DARDUINO_INKPLATE10
   -DBOARD_HAS_PSRAM
   -mfix-esp32-psram-cache-issue
-  -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW_PTRVAL ; sets configCHECK_FOR_STACK_OVERFLOW = 1, helps detect stack overflows
-  -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_WARN ; default should be ARDUHAL_LOG_LEVEL_WARN
+  -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW_PTRVAL
+    ; sets configCHECK_FOR_STACK_OVERFLOW = 1, helps detect stack overflows
 
-; build_type = debug
-; debug levels
-; ARDUHAL_LOG_LEVEL_NONE
-; ARDUHAL_LOG_LEVEL_ERROR
-; ARDUHAL_LOG_LEVEL_WARN  *default*
-; ARDUHAL_LOG_LEVEL_INFO
-; ARDUHAL_LOG_LEVEL_DEBUG
-; ARDUHAL_LOG_LEVEL_VERBOSE
+
+[env:inkplate10]
+; settings for inkplate10
+build_flags =
+  ${env.build_flags}
+  -DARDUINO_INKPLATE10
+
+
+
+[env:debug]
+build_type = debug
+build_flags =
+  ${env.build_flags}
+  -DARDUINO_INKPLATE10 ; change if debugging another board
+  -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+    ; build_type = debug
+    ; debug levels
+    ; ARDUHAL_LOG_LEVEL_NONE
+    ; ARDUHAL_LOG_LEVEL_ERROR
+    ; ARDUHAL_LOG_LEVEL_WARN  *default*
+    ; ARDUHAL_LOG_LEVEL_INFO
+    ; ARDUHAL_LOG_LEVEL_DEBUG
+    ; ARDUHAL_LOG_LEVEL_VERBOSE
+
 
 [env:ota]
-extends = env:esp32
+; TODO: migrate this to a custom target
+extends = env:inkplate10 ; change if using another board
 targets = upload
 ; for OTA
 ; host machine much be reachable from ESP
 ; might need to set partitions sometime
-upload_port = homeplate.local
+upload_port = homeplate.local ; change this to your device's name/IP
 upload_protocol = espota
 upload_flags =
   --host_port=8266 ; this port must be allowed through the firewall from the ESP to this computer
 
 
 [env:vcom]
-extends = env:esp32
+; if using a diffent device be sure to change the extended enviroment
+extends = env:inkplate10
 lib_deps =
-  e-radionicacom/InkplateLibrary @ ^5.5.1
+  e-radionicacom/InkplateLibrary @ 5.7.1
 build_src_filter= -<*> +<../vcom_src/>
