Add Inkplate6Plus environment

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = inkplate10
+default_envs = inkplate10, inkplate6plus
 ; set the below to add an "include" dir to the build path
 include_dir =
 
@@ -62,6 +62,12 @@ build_flags =
   ${env.build_flags}
   -DARDUINO_INKPLATE10
 
+
+[env:inkplate6plus]
+; settings for inkplate10
+build_flags =
+  ${env.build_flags}
+  -DARDUINO_INKPLATE6PLUS
 
 
 [env:debug]
