--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,7 @@
 {
-    "files.associations": {
-        "*.tmpl": "html",
-        "__hash_table": "cpp",
-        "initializer_list": "cpp",
-        "iterator": "cpp",
-        "unordered_map": "cpp",
-        "unordered_set": "cpp",
-        "__bit_reference": "cpp",
-        "__split_buffer": "cpp",
-        "array": "cpp",
-        "deque": "cpp",
-        "string": "cpp",
-        "string_view": "cpp",
-        "vector": "cpp",
-        "functional": "cpp",
-        "system_error": "cpp"
-    },
+    "markdownlint.config": {
+        "no-inline-html": {
+            "allowed_elements": [ "img" ]
+        }
+    }
 }
