added support for inkplate10v2 (untested)

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,7 +27,7 @@ lib_deps =
   ; >1.2.3 - any version greater than 1.2.3. >=, <, and <= are also possible
   ; >0.1.0,!=0.2.0,<0.3.0 - any version greater than 0.1.0, not equal to 0.2.0 and less than 0.3.0
   
-  https://github.com/e-radionicacom/Inkplate-Arduino-library#6.0.0
+  https://github.com/e-radionicacom/Inkplate-Arduino-library#7.0.0
   arduino-libraries/NTPClient @ 3.2.1 ; NTP client
   fbiego/ESP32Time @ 2.0.0 ; for syncing RTC to intenral clock
   jchristensen/Timezone @ 1.2.4 ; for timezone and DST calculations
@@ -45,14 +45,17 @@ build_flags =
   -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW_PTRVAL
     ; sets configCHECK_FOR_STACK_OVERFLOW = 1, helps detect stack overflows
 
-
 [env:inkplate10]
 ; settings for inkplate10
 build_flags =
   ${env.build_flags}
   -DARDUINO_INKPLATE10
 
-
+[env:inkplate10v2]
+; settings for inkplate10
+build_flags =
+  ${env.build_flags}
+  -DARDUINO_INKPLATE10V2
 
 [env:debug]
 build_type = debug
