fix vcom dependency

--- a/platformio.ini
+++ b/platformio.ini
@@ -90,5 +90,5 @@ upload_flags =
 ; if using a diffent device be sure to change the extended enviroment
 extends = env:inkplate10
 lib_deps =
-  e-radionicacom/InkplateLibrary @ 5.7.1
+  e-radionicacom/InkplateLibrary#7.0.0
 build_src_filter= -<*> +<../vcom_src/>
