fix: rename default section to be able to interpolate build_flags

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,7 +3,7 @@ default_envs = inkplate10
 ; set the below to add an "include" dir to the build path
 include_dir =
 
-[env:inkplate_defaults]
+[inkplate_defaults]
 ; default enviroments for inkplate devices
 platform = espressif32
 framework = arduino
@@ -47,23 +47,23 @@ build_flags =
 
 [env:inkplate10]
 ; settings for inkplate10
-extends = env:inkplate_defaults
+extends = inkplate_defaults
 build_flags =
-  ${env.build_flags}
+  ${inkplate_defaults.build_flags}
   -DARDUINO_INKPLATE10
 
 [env:inkplate10v2]
 ; settings for inkplate10v2
-extends = env:inkplate_defaults
+extends = inkplate_defaults
 build_flags =
-  ${env.build_flags}
+  ${inkplate_defaults.build_flags}
   -DARDUINO_INKPLATE10V2
 
 [env:debug]
-extends = env:inkplate_defaults
+extends = inkplate_defaults
 build_type = debug
 build_flags =
-  ${env.build_flags}
+  ${inkplate_defaults.build_flags}
   -DARDUINO_INKPLATE10 ; change if debugging another board
   -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
     ; build_type = debug
