--- a/platformio.ini
+++ b/platformio.ini
@@ -4,7 +4,7 @@ default_envs = inkplate10
 include_dir =
 
 [inkplate_defaults]
-; default enviroments for inkplate devices
+; default environments for inkplate devices
 platform = espressif32
 framework = arduino
 monitor_speed = 115200
