--- a/platformio.ini
+++ b/platformio.ini
@@ -90,7 +90,7 @@ upload_flags =
 
 
 [env:vcom]
-; if using a diffent device be sure to change the extended enviroment
+; if using a different device be sure to change the extended environment
 extends = env:inkplate10
 lib_deps =
   e-radionicacom/InkplateLibrary#7.0.0
