--- a/platformio.ini
+++ b/platformio.ini
@@ -27,7 +27,7 @@ lib_deps =
   ; >1.2.3 - any version greater than 1.2.3. >=, <, and <= are also possible
   ; >0.1.0,!=0.2.0,<0.3.0 - any version greater than 0.1.0, not equal to 0.2.0 and less than 0.3.0
   
-  https://github.com/SolderedElectronics/Inkplate-Arduino-library#10.0.0
+  https://github.com/SolderedElectronics/Inkplate-Arduino-library#10.1.0
   arduino-libraries/NTPClient @ 3.2.1 ; NTP client
   fbiego/ESP32Time @ 2.0.6 ; for syncing RTC to internal clock
   jchristensen/Timezone @ 1.2.4 ; for timezone and DST calculations
@@ -94,7 +94,15 @@ upload_flags =
 extends = env:inkplate10
 lib_deps =
   e-radionicacom/InkplateLibrary#7.0.0
-build_src_filter= -<*> +<../vcom_src/>
+build_src_filter= -<*> +<../src_vcom/>
+
+
+[env:Wavefrom_EEPROM]
+; if using a different device be sure to change the extended environment
+extends = env:inkplate10
+lib_deps =
+  https://github.com/SolderedElectronics/Inkplate-Arduino-library#10.1.0
+build_src_filter= -<*> +<../src_eeprom/>
 
 [env:native]
 platform = native
