update and pin version to build

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,7 +5,7 @@ include_dir =
 
 [inkplate_defaults]
 ; default environments for inkplate devices
-platform = espressif32
+platform = espressif32 @ 6.11.0
 framework = arduino
 monitor_speed = 115200
 board = esp32dev
@@ -27,13 +27,15 @@ lib_deps =
   ; >1.2.3 - any version greater than 1.2.3. >=, <, and <= are also possible
   ; >0.1.0,!=0.2.0,<0.3.0 - any version greater than 0.1.0, not equal to 0.2.0 and less than 0.3.0
   
-  https://github.com/SolderedElectronics/Inkplate-Arduino-library#10.1.0
+  https://github.com/SolderedElectronics/Inkplate-Arduino-library#10.2.1
   arduino-libraries/NTPClient @ 3.2.1 ; NTP client
   fbiego/ESP32Time @ 2.0.6 ; for syncing RTC to internal clock
   jchristensen/Timezone @ 1.2.4 ; for timezone and DST calculations
   ricmoo/QRCode @ 0.0.1 ; for QR code
   marvinroger/AsyncMqttClient @ 0.9.0 ; FOR MQTT
   bblanchon/ArduinoJson @ 7.1.0 ; for JSON
+
+  https://github.com/PaulStoffregen/Time @ 1.6.1 ; ? needed by Inkplate-Arduino-library
 
 ; set the default target to compile, upload, and monitor
 targets = upload, monitor
@@ -101,7 +103,7 @@ build_src_filter= -<*> +<../src_vcom/>
 ; if using a different device be sure to change the extended environment
 extends = env:inkplate10
 lib_deps =
-  https://github.com/SolderedElectronics/Inkplate-Arduino-library#10.1.0
+  https://github.com/SolderedElectronics/Inkplate-Arduino-library#10.2.1
 build_src_filter= -<*> +<../src_eeprom/>
 
 [env:native]
